--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@reach/router": "^1.3.4",
     "@tim-soft/react-spring-web": "^9.0.0-beta.36",
     "@web3modal/ethers": "^4.0.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.1.1",
-    "contracts": "file:../@marketplace",
+    "contracts": "./../marketplace-contracts/",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.5",
     "elegant-icons": "0.0.1",
@@ -26,9 +24,11 @@
     "ethers": "^6.11.1",
     "font-awesome": "^4.7.0",
     "moment": "^2.29.1",
+    "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.1",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-dom": "^18.2.0",
     "react-photo-gallery": "^8.0.0",
     "react-pose": "^4.0.10",
     "react-redux": "^7.2.5",
