--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@web3modal/ethers": "^4.0.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.1.1",
-    "contracts": "./../@marketplace",
+    "contracts": "./../marketplace-contracts",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.5",
     "elegant-icons": "0.0.1",
@@ -23,6 +23,7 @@
     "et-line": "^1.0.1",
     "ethers": "^6.11.1",
     "font-awesome": "^4.7.0",
+    "formik": "^2.4.5",
     "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
@@ -44,7 +45,8 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "typesafe-actions": "^5.1.0",
-    "web-vitals": "^3.5.2"
+    "web-vitals": "^3.5.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
