--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "sass": "^1.39.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.6",
+    "sweetalert2-react-content": "^5.0.7",
     "typesafe-actions": "^5.1.0",
     "web-vitals": "^3.5.2",
     "yup": "^1.4.0"
