--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/core": "^5.7.2",
     "@reach/router": "^1.3.4",
     "@tim-soft/react-spring-web": "^9.0.0-beta.36",
     "@web3modal/ethers": "^4.0.10",
@@ -24,13 +25,13 @@
     "ethers": "^6.11.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.1",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.1",
     "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "^18.2.0",
-    "react-photo-gallery": "^8.0.0",
     "react-pose": "^4.0.10",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
