--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@capacitor/core": "^5.7.2",
-    "@reach/router": "^1.3.4",
     "@tim-soft/react-spring-web": "^9.0.0-beta.36",
     "@web3modal/ethers": "^4.0.10",
     "axios": "^1.6.7",
@@ -34,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-pose": "^4.0.10",
     "react-redux": "^7.2.5",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-slick": "^0.30.1",
