--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.1",
     "contracts": "./../marketplace-contracts",
     "cra-template": "1.2.0",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "elegant-icons": "0.0.1",
     "emailjs-com": "^3.2.0",
@@ -31,6 +32,7 @@
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.1",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-pose": "^4.0.10",
     "react-redux": "^7.2.5",
