DATA TABLE ADDED

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@web3modal/ethers": "^4.0.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.1.1",
-    "contracts": "./../marketplace-contracts",
+    "contracts": "./../@marketplace",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
@@ -32,6 +32,7 @@
     "react-awesome-reveal": "^4.2.8",
     "react-bootstrap": "^2.10.1",
     "react-cool-onclickoutside": "^1.7.0",
+    "react-data-table-component": "^7.6.2",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-pose": "^4.0.10",
