--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "http://localhost:3000",
   "scripts": {
+    "start": "vite",
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -16,7 +18,7 @@
     "@web3modal/ethers": "^4.0.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.1.1",
-    "contracts": "./../@marketplace",
+    "contracts": "./../marketplace-contracts",
     "cra-template": "1.2.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
